# drone_autonomous_landing_on_ugv

./: .gitignore  README.md  README_nuovo.md
data_records/FixedTag1/: metadata.yaml
data_records/FixedTag3/: FixedTag3_0.db3  metadata.yaml
data_records/rosbag2_2021_05_27-15_04_55/: metadata.yaml
data_records/simulated_uwb_env/: metadata.yaml
data_records/simulated_uwb_gazebo/: metadata.yaml
data_records/test/: metadata.yaml  test_0.db3
json/: anchors.json  anchors_covivio.json  anchors_covivio_2.json  anchors_covivio_3.json  anchors_gabbia.json  anchors_landing_pad.json  campo_volo_2021_11_05.json  target_test.json
launch/: uwb_position_eval.launch
models/rover/: rover.sdf  (+1 more)
other_material/: empty.world
px4_params/: Gazebo_06_10_21.params  X500_05_07_21.params  X500_06_10_21.params  X500_07_06_21.params  X500_09_06_21.params  X500_15_09_2021.params  X500_23_06_21.params
rosbags/: MovingTarget.py  rosbag2.py
scripts/: analyzers.py  positioning_eval.py  thesis_plot.py
src/control/: package.xml  setup.py
src/control/control/: __init__.py  drone_controller.py  hand_of_god_nav.py  offboard_control.py  target_follower.py  vehicle_controller.py
src/ros2_px4_control/: package.xml  setup.cfg  setup.py
src/ros2_px4_control/ros2_px4_control/: drone_controller.py  drone_controller_old.py  drone_controller_sim.py  hand_of_god_nav.py  odometry_sender.py  offboard_control.py  rover_controller.py  vehicle_controller.py
src/ros2_px4_estimation/: package.xml  setup.cfg  setup.py
src/ros2_px4_estimation/ros2_px4_estimation/: apriltag_yaw_estimator.py  drone_rover_kf_loose.py  drone_rover_kf_pos.py  drone_rover_kf_pos_theta.py  drone_rover_kf_pos_theta_bias_sim.py  drone_rover_kf_pos_theta_sim.py  drone_rover_kf_yaw.py  drone_rover_kf_yaw_bias.py  drone_rover_uwb_positioning.py  drone_vehicle_kf_loose.py  drone_vehicle_kf_loose_3.py  drone_vehicle_kf_yaw.py  drone_vehicle_px4_positioning.py  drone_vehicle_uwb_positioning.py  gazebo_yaw_estimator.py  gps_positioning.py  kf_drone_rover.py  kf_loose_positioning.py  kf_tight_positioning.py  magnetometer_driver.py  magnetometer_yaw_estimator.py  px4_positioning.py  px4_yaw_estimator.py  range_sensor_positioning.py  ukf_positioning.py  uwb_driver.py  uwb_estimate_2_px4.py  uwb_positioning.py  video_streamer.py
src/ros2_px4_functions/: package.xml  setup.cfg  setup.py
src/ros2_px4_functions/ros2_px4_functions/: __init__.py  control_algorithms.py  geo_conversions.py  swarming_functions.py  trilateration.py  trilateration_real.py
src/ros2_px4_gazebo/: CMakeLists.txt  package.xml
src/ros2_px4_gazebo/env-hooks/: ros2_px4_gazebo.dsv.in
src/ros2_px4_gazebo/include/ros2_px4_gazebo/: ros2_px4_gazebo_uwb.hpp
src/ros2_px4_gazebo/models/: .gitignore
src/ros2_px4_gazebo/models/Apriltag36_11_00000/: Apriltag36_11_00000.sdf
src/ros2_px4_gazebo/models/iris/: iris.sdf
src/ros2_px4_gazebo/models/rover_uwb/: rover_uwb.sdf
src/ros2_px4_gazebo/models/uwb_anchor/: uwb_anchor.sdf
src/ros2_px4_gazebo/models/uwb_anchor_main/: model.config  uwb_anchor_main.sdf
src/ros2_px4_gazebo/models/uwb_anchor_offset/: model.config  uwb_anchor_offset.sdf
src/ros2_px4_gazebo/src/: ros2_px4_gazebo_uwb.cpp
src/ros2_px4_gazebo/worlds/: 4anchors.world  4ground_anchors.world  5anchors_offset.world  8anchors.world  better_cage.world  far_cage.world  gabbia.world  uwb_plugin_test.world
src/ros2_px4_interfaces/: CMakeLists.txt  package.xml
src/ros2_px4_interfaces/msg/: DistanceStamped.msg  DistanceStampedArray.msg  Error.msg  UnitVector.msg  UnitVectorArray.msg  Uwb.msg  UwbSensor.msg  VelocityVector.msg  Yaw.msg
src/ros2_px4_interfaces/srv/: ControlMode.srv  DroneCustomCommand.srv  GpsEnable.srv  SwarmCommand.srv  TargetCustomCommand.srv
src/ros2_px4_launch_files/: CMakeLists.txt  package.xml
src/ros2_px4_launch_files/launch/: drone_controller.launch.py  drone_controller_sim.launch.py  drone_mission.launch.py  drone_rover_clients_agents.launch.py  drone_rover_positioning.launch.py  drone_rover_positioning_error.launch.py  drone_rover_sim.launch.py  drone_rover_topic_recorder.launch.py  drone_vehicle_clients_agents.launch.py  drone_vehicle_positioning.launch.py  drone_vehicle_sim.launch.py  fake_gps.launch.py  filter_position_eval.launch.py  real_drone_positioning.launch.py  real_rover_positioning.launch.py.py  real_uwb_position_eval.launch.py  simulation_recording.launch.py  uwb_driver_profiling.launch.py  uwb_drone_vehicle.launch.py  uwb_fusion.launch.py  uwb_multiple_sensor.launch.py  uwb_position_eval.launch.py  uwb_position_eval_real.launch.py  uwb_position_odom.launch.py
src/ros2_px4_swarming/: package.xml  setup.cfg  setup.py
src/ros2_px4_swarming/bagfiles/rosbag2_2022_02_21-15_02_11/: metadata.yaml
src/ros2_px4_swarming/bagfiles/rosbag2_2022_02_21-15_05_31/: metadata.yaml
src/ros2_px4_swarming/bagfiles/rosbag2_2022_02_21-15_07_58/: metadata.yaml
src/ros2_px4_swarming/bagfiles/rosbag2_2022_02_21-15_10_58/: metadata.yaml
src/ros2_px4_swarming/launch/: launch_drone.launch.py  launch_drone_0.launch.py  launch_simulation.launch.py  launch_test.launch.py
src/ros2_px4_swarming/models/iris/: iris.sdf.jinja
src/ros2_px4_swarming/models/r1_rover/: r1_rover.sdf  r1_rover.sdf.jinja
src/ros2_px4_swarming/models/uwb_anchor/: uwb_anchor.sdf
src/ros2_px4_swarming/models/uwb_sensor/: model.config  uwb_sensor.sdf
src/ros2_px4_swarming/other/: README.md  gazebo_sitl_multiple_run.sh  jinja_gen.py  launchRTPSAgent.sh  ros2_px4_swarming_aliases.sh  super_client_configuration_file.xml
src/ros2_px4_swarming/parameters/: anchor_params.yaml  drone_params.yaml  params.yaml
src/ros2_px4_swarming/ros2_px4_swarming/: GPSSimulator.py  anchorDrone.py  numAnchorsNode.py  performanceAnalyzer.py  plotBag.py  printInformationNode.py  targetRover.py  topicsPlotter.py  topicsRecorder.py  trackingVelocityCalculator.py  unitVectorsCalculator.py
src/ros2_px4_swarming/worlds/: swarming_empty.world
worlds/: test_rover_pic4ser.world  uwb_anchor_cube.world  uwb_test.world  uwb_test_alotofanchors.world  uwb_vehicle.world  uwb_vehicle_2.world
(+164 files in other folders)
