<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cosimocon@yahoo.it">Cosimo Conte</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>random</depend>
  <depend>numpy</depend>
  <depend>tf2_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>math</depend>
  <depend>custom_interfaces</depend>
  <depend>functions</depend>
  <depend>random</depend>


  <depend>custom_interfaces</depend>
  <depend>functions</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
