<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_px4_control</name>
  <version>0.0.0</version>
  <description>This package contains nodes to control the drone interfacing with PX4</description>
  <maintainer email="cosimocon@gmail.com">Cosimo Conte</maintainer>
  <maintainer email="gennscar97@gmail.com">Gennaro Scarati</maintainer>
  <license>GNU GPLv3</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_px4_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>