<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_px4_estimation</name>
  <version>0.0.0</version>
  <description>This package contains state estimation nodes for the drone or other components</description>
  <maintainer email="cosimocon@gmail.com">Cosimo Conte</maintainer>
  <maintainer email="gennscar97@gmail.com">Gennaro Scarati</maintainer>
  <maintainer email="matte.celada@gmail.com">Matteo Celada</maintainer>
  <license>GNU GPLv3</license>

  <depend>rclpy</depend>
  <depend>random</depend>
  <depend>numpy</depend>
  <depend>scipy</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>px4_msgs</depend>

  <depend>ros2_px4_functions</depend>
  <depend>ros2_px4_interfaces</depend>

  <exec_depend>uwb_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>