<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_px4_functions</name>
  <version>0.0.0</version>
  <description>This package contains all functions that are not directly ROS2 nodes used by nodes</description>
  <maintainer email="cosimocon@gmail.com">Cosimo Conte</maintainer>
  <maintainer email="gennscar97@gmail.com">Gennaro Scarati</maintainer>
  <maintainer email="matte.celada@gmail.com">Matteo Celada</maintainer>
  <license>GNU GPLv3</license>

  <depend>numpy</depend>
  <depend>scipy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>